--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fun Bus Travel Agency - Solution</title>
-
+  <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
@@ -15,11 +15,24 @@
 </head>
 
 <body>
-
-  
-     
+  <header>
+    <h1>Fun Bus</h1>
+    <nav>
+      <a href = "">Home</a>
+      <a href = "">About Us</a>
+      <a href = "">Blog</a>
+      <a href = "">Contact</a>
+    </nav>
+  </header>
+    <div id = "borderambigdumb"></div> 
   <div class="container home">
-   
+    <div class = "content-head">
+      <img src = "img/fun-bus.jpg"/>
+      <div>
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition</p>
+      </div>
+    </div>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
